3ドメの正直

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Matsumoto Tomoko</h1>
     <p>Risa　変更を加えました</p>
     <p>再度git　push　origin　mainを試してみる・・・</p>
+    <p>できたのでしょうか・・・20:55</p>
 </body>
 </html>
