コンフリクトを作ろうとしてやめたよ

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>再度git　push　origin　mainを試してみる・・・</p>
     <p>できたのでしょうか・・・20:55</p>
     <h2>branchを作りましたヨ</h2>
+    <h3>コンフリクトを作るよ</h3>
 </body>
 </html>
